Use AWS_DEFAULT_REGION only
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
+++ b/cases/tcp_to_blackhole_performance/ansible/bootstrap.yml
@@ -27,8 +27,7 @@
       action: configure
 
     - role: vector
-      action: install_archive_from_url
+      action: install
 
     - role: vector
       action: configure
-      configuration_file: config_files/vector.old.toml
