chore: Add new Ansible aws_ec2 inventor plugin
Signed-off-by: binarylogic <bjohnson@binarylogic.com>

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -11,7 +11,7 @@
 
 # some basic default values...
 
-#inventory      = /etc/ansible/hosts
+inventory      = plugins
 #library        = /usr/share/my_modules/
 #module_utils   = /usr/share/my_module_utils/
 #remote_tmp     = ~/.ansible/tmp
@@ -68,7 +68,7 @@ gathering = explicit
 roles_path    = roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback, you can only have one 'stdout' type  enabled at a time.
 #stdout_callback = skippy
@@ -326,7 +326,7 @@ roles_path    = roles
 
 [inventory]
 # enable inventory plugins, default: 'host_list', 'script', 'auto', 'yaml', 'ini', 'toml'
-#enable_plugins = host_list, virtualbox, yaml, constructed
+enable_plugins = aws_ec2
 
 # ignore these extensions when parsing a directory as inventory source
 #ignore_extensions = .pyc, .pyo, .swp, .bak, ~, .rpm, .md, .txt, ~, .orig, .ini, .cfg, .retry
@@ -398,7 +398,7 @@ roles_path    = roles
 # By default, this option is disabled to preserve compatibility with
 # sudoers configurations that have requiretty (the default on many distros).
 #
-#pipelining = False
+pipelining = True
 
 # Control the mechanism for transferring files (old)
 #   * smart = try sftp and then try scp [default]
