--- a/cases/disk_buffer_performance/ansible/config_files/td-agent-bit.conf
+++ b/cases/disk_buffer_performance/ansible/config_files/td-agent-bit.conf
@@ -18,5 +18,5 @@
 [OUTPUT]
     Name  forward
     Match *
-    Host  {{ consumer_instance.ec2_private_ip_address }}
+    Host  {{ consumer_ip }}
     Port  {{ consumer_port }}
