--- a/cases/file_to_tcp_performance/ansible/config_files/filebeat.yml
+++ b/cases/file_to_tcp_performance/ansible/config_files/filebeat.yml
@@ -9,5 +9,5 @@ filebeat.inputs:
     - "{{ test_files_root }}*.log"
 
 output.logstash:
-  hosts: ["{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"]
+  hosts: ["{{ consumer_ip }}:{{ consumer_port }}"]
   worker: 4
