--- a/cases/file_to_tcp_performance/ansible/config_files/logstash.subject.pipeline.conf
+++ b/cases/file_to_tcp_performance/ansible/config_files/logstash.subject.pipeline.conf
@@ -7,7 +7,7 @@ input {
 
 output {
   tcp {
-    host => "{{ consumer_instance.ec2_private_ip_address }}"
+    host => "{{ consumer_ip }}"
     mode => "client"
     port => {{ consumer_port }}
   }
