--- a/cases/file_to_tcp_performance/ansible/config_files/td-agent-bit.conf
+++ b/cases/file_to_tcp_performance/ansible/config_files/td-agent-bit.conf
@@ -6,5 +6,5 @@
 [OUTPUT]
     Name  forward
     Match test_file
-    Host  {{ consumer_instance.ec2_private_ip_address }}
+    Host  {{ consumer_ip }}
     Port  {{ consumer_port }}
