--- a/cases/file_to_tcp_performance/ansible/config_files/telegraf.conf
+++ b/cases/file_to_tcp_performance/ansible/config_files/telegraf.conf
@@ -20,7 +20,7 @@
 
 [[outputs.socket_writer]]
   ## URL to connect to
-  address = "tcp://{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address = "tcp://{{ consumer_ip }}:{{ consumer_port }}"
   # address = "tcp://example.com:http"
   # address = "tcp4://127.0.0.1:8094"
   # address = "tcp6://127.0.0.1:8094"
