--- a/cases/regex_parsing_performance/ansible/config_files/logstash.pipeline.conf
+++ b/cases/regex_parsing_performance/ansible/config_files/logstash.pipeline.conf
@@ -14,7 +14,7 @@ filter {
 
 output {
   tcp {
-    host => "{{ consumer_instance.ec2_private_ip_address }}"
+    host => "{{ consumer_ip }}"
     port => {{ consumer_port }}
   }
 }
