--- a/cases/regex_parsing_performance/ansible/config_files/td-agent.conf
+++ b/cases/regex_parsing_performance/ansible/config_files/td-agent.conf
@@ -27,7 +27,7 @@
 
   <server>
     name consumer
-    host {{ consumer_instance.ec2_private_ip_address }}
+    host {{ consumer_ip }}
     port {{ consumer_port }}
   </server>
 </match>
