--- a/cases/regex_parsing_performance/ansible/config_files/telegraf.conf
+++ b/cases/regex_parsing_performance/ansible/config_files/telegraf.conf
@@ -11,7 +11,7 @@
     pattern = "^(?P<host>[\\w\\.]+) - (?P<user>[\\w]+) (?P<bytes_in>[\\d]+) \\[(?P<timestamp>.*)\\] \"(?P<method>[\\w]+) (?P<path>.*)\" (?P<status>[\\d]+) (?P<bytes_out>[\\d]+)$"
 
 [[outputs.socket_writer]]
-  address = "tcp://{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address = "tcp://{{ consumer_ip }}:{{ consumer_port }}"
 
   ## Data format to generate.
   ## Each data format has its own unique set of configuration options, read
