--- a/cases/tcp_to_http_performance/ansible/config_files/logstash.pipeline.conf
+++ b/cases/tcp_to_http_performance/ansible/config_files/logstash.pipeline.conf
@@ -9,6 +9,6 @@ input {
 output {
   http {
     http_method => post
-    url => "http://{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+    url => "http://{{ consumer_ip }}:{{ consumer_port }}"
   }
 }
