--- a/cases/tcp_to_http_performance/ansible/config_files/td-agent-bit.conf
+++ b/cases/tcp_to_http_performance/ansible/config_files/td-agent-bit.conf
@@ -6,7 +6,7 @@
 [OUTPUT]
     Name   http
     Match  *
-    Host   {{ consumer_instance.ec2_private_ip_address }}
+    Host   {{ consumer_ip }}
     Port   {{ consumer_port }}
     Format json_lines
     tls    Off
