--- a/cases/tcp_to_http_performance/ansible/config_files/td-agent.conf
+++ b/cases/tcp_to_http_performance/ansible/config_files/td-agent.conf
@@ -11,6 +11,6 @@
 
 <match **>
   @type http
-  endpoint_url http://{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}
+  endpoint_url http://{{ consumer_ip }}:{{ consumer_port }}
   serializer json
 </match>
