--- a/cases/tcp_to_tcp_performance/ansible/config_files/td-agent-bit.conf
+++ b/cases/tcp_to_tcp_performance/ansible/config_files/td-agent-bit.conf
@@ -7,5 +7,5 @@
 [OUTPUT]
     Name  forward
     Match tcp_in
-    Host  {{ consumer_instance.ec2_private_ip_address }}
+    Host  {{ consumer_ip }}
     Port  {{ consumer_port }}
