--- a/cases/tcp_to_tcp_performance/ansible/config_files/vector.old.toml
+++ b/cases/tcp_to_tcp_performance/ansible/config_files/vector.old.toml
@@ -5,5 +5,5 @@
 [sinks.out]
   inputs   = ["in"]
   type     = "tcp"
-  address  = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address  = "{{ consumer_ip }}:{{ consumer_port }}"
   encoding = "text"
