--- a/ansible/ec2.ini
+++ b/ansible/ec2.ini
@@ -26,7 +26,7 @@ regions = auto
 # This is the normal destination variable to use. If you are running Ansible
 # from outside EC2, then 'public_dns_name' makes the most sense. If you are
 # running Ansible from within EC2, then perhaps you want to use the internal
-# address, and should set this to 'private_dns_name'. The key of an EC2 tag
+# address, and should set this to 'private_ip_address'. The key of an EC2 tag
 # may optionally be used; however the boto instance variables hold precedence
 # in the event of a collision.
 destination_variable = public_dns_name
