--- a/cases/disk_buffer_performance/ansible/config_files/logstash.pipeline.conf
+++ b/cases/disk_buffer_performance/ansible/config_files/logstash.pipeline.conf
@@ -8,7 +8,7 @@ input {
 
 output {
   tcp {
-    host => "{{ consumer_instance.ec2_private_ip_address }}"
+    host => "{{ consumer_ip }}"
     port => {{ consumer_port }}
   }
 }
