--- a/cases/disk_buffer_performance/ansible/config_files/td-agent.conf
+++ b/cases/disk_buffer_performance/ansible/config_files/td-agent.conf
@@ -22,7 +22,7 @@
 
   <server>
     name consumer
-    host {{ consumer_instance.ec2_private_ip_address }}
+    host {{ consumer_ip }}
     port {{ consumer_port }}
   </server>
 </match>
