--- a/cases/disk_buffer_performance/ansible/config_files/vector.toml
+++ b/cases/disk_buffer_performance/ansible/config_files/vector.toml
@@ -9,7 +9,7 @@ data_dir = "/var/lib/vector"
   inputs  = ["in"]
   type    = "socket"
   mode    = "tcp"
-  address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address = "{{ consumer_ip }}:{{ consumer_port }}"
 
   [sinks.out.buffer]
     type      = "disk"
