--- a/cases/file_to_tcp_performance/ansible/config_files/splunk.outputs.conf
+++ b/cases/file_to_tcp_performance/ansible/config_files/splunk.outputs.conf
@@ -4,4 +4,4 @@ defaultGroup=group1
 [tcpout:group1]
 disabled=false
 sendCookedData=false
-server={{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}
+server={{ consumer_ip }}:{{ consumer_port }}
