--- a/cases/lua_base_performance/ansible/config_files/vector.toml
+++ b/cases/lua_base_performance/ansible/config_files/vector.toml
@@ -14,5 +14,5 @@ event["new_field"] = "new value"
   inputs   = ["lua"]
   type     = "socket"
   mode     = "tcp"
-  address  = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address  = "{{ consumer_ip }}:{{ consumer_port }}"
   encoding = "text"
