--- a/cases/sighup_correctness/ansible/config_files/td-agent-bit.conf
+++ b/cases/sighup_correctness/ansible/config_files/td-agent-bit.conf
@@ -10,5 +10,5 @@
 [OUTPUT]
     Name  forward
     Match tcp_in
-    Host  {{ consumer_instance.ec2_private_ip_address }}
+    Host  {{ consumer_ip }}
     Port  {{ consumer_port }}
