--- a/cases/sighup_correctness/ansible/config_files/vector.toml
+++ b/cases/sighup_correctness/ansible/config_files/vector.toml
@@ -7,4 +7,4 @@
   inputs  = ["in"]
   type    = "socket"
   mode    = "tcp"
-  address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address = "{{ consumer_ip }}:{{ consumer_port }}"
