Update configs some more
Add encoding.codec to sockets

Add missing logstash.settings.yml

Update regex parser config to use patterns instead of regex

Add subject_port which was missing for the rest of the
real_world_1_performance cases

Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

--- a/cases/regex_parsing_performance/ansible/config_files/vector.toml
+++ b/cases/regex_parsing_performance/ansible/config_files/vector.toml
@@ -6,10 +6,11 @@
 [transforms.apache_common_parser]
   inputs = ["in"]
   type   = "regex_parser"
-  regex  = '^(?P<host>[\w\.]+) - (?P<user>[\w]+) (?P<bytes_in>[\d]+) \[(?P<timestamp>.*)\] "(?P<method>[\w]+) (?P<path>.*)" (?P<status>[\d]+) (?P<bytes_out>[\d]+)$'
+  patterns = ['^(?P<host>[\w\.]+) - (?P<user>[\w]+) (?P<bytes_in>[\d]+) \[(?P<timestamp>.*)\] "(?P<method>[\w]+) (?P<path>.*)" (?P<status>[\d]+) (?P<bytes_out>[\d]+)$']
 
 [sinks.out]
   inputs  = ["apache_common_parser"]
   type    = "socket"
   mode    = "tcp"
   address = "{{ consumer_ip }}:{{ consumer_port }}"
+  encoding.codec = "text"
