--- a/cases/disk_buffer_performance/ansible/config_files/vector.toml
+++ b/cases/disk_buffer_performance/ansible/config_files/vector.toml
@@ -10,6 +10,7 @@ data_dir = "/var/lib/vector"
   type    = "socket"
   mode    = "tcp"
   address = "{{ consumer_ip }}:{{ consumer_port }}"
+  encoding.codec = "text"
 
   [sinks.out.buffer]
     type      = "disk"
