chore: Add new Ansible aws_ec2 inventory plugin (#57)
* chore: Add new Ansible aws_ec2 inventor plugin

Signed-off-by: binarylogic <bjohnson@binarylogic.com>

* Brush off configuration

Updates config to work with the newest ansible:

* Slims down inventory_aws_ec2 to just what we need (tags) and removes
  the old inventory file and all references
* Replaces fact creation of consumer_instance and subject_instance with
  just their private ips as I couldn't get set_fact working with the
  HostVarsVars type

Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

* Fix a couple of more benchmarks

Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

* Update configs some more

Add encoding.codec to sockets

Add missing logstash.settings.yml

Update regex parser config to use patterns instead of regex

Add subject_port which was missing for the rest of the
real_world_1_performance cases

Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

Co-authored-by: Jesse Szwedko <jesse@szwedko.me>

--- a/cases/disk_buffer_performance/ansible/config_files/vector.toml
+++ b/cases/disk_buffer_performance/ansible/config_files/vector.toml
@@ -9,7 +9,8 @@ data_dir = "/var/lib/vector"
   inputs  = ["in"]
   type    = "socket"
   mode    = "tcp"
-  address = "{{ consumer_instance.ec2_private_ip_address }}:{{ consumer_port }}"
+  address = "{{ consumer_ip }}:{{ consumer_port }}"
+  encoding.codec = "text"
 
   [sinks.out.buffer]
     type      = "disk"
