--- a/cases/file_to_tcp_performance/ansible/bootstrap.yml
+++ b/cases/file_to_tcp_performance/ansible/bootstrap.yml
@@ -12,7 +12,7 @@
   become: true
   tasks:
     - set_fact:
-        consumer_instance: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_consumer'].0] }}"
+        consumer_ip: "{{ hostvars[groups['tag_Name_vector_test_' + user_id + '_' + test_name + '_' + test_configuration + '_consumer'].0].private_ip_address }}"
 
 - hosts: '{{ test_namespace }}:&tag_TestRole_subject'
   become: true
@@ -49,7 +49,7 @@
         name: flog
       vars:
         action: create_test_file
-        bytes: {{ test_file_bytes }}
+        bytes: "{{ test_file_bytes }}"
         location: "{{ test_files_root }}{{ item }}.log"
         encoding: text
       with_sequence: count={{ test_file_count }}
