Updates to configuration to fix a few issues discovered while running
This includes a few fixes for issues I discovered while trying to run
the test harness tests the past couple of days.

* Use subject_ip for disk_buffer_performance cases  Matches other test
  cases. The existing hostvars seemed to be pulling a different IP;
  I think because it wasn't filtering enough (just on role).
* Remove --reconfigure from bin/test. This only needs to be done in unusual circumstances.
* Remove the vector user after uninstalling the package. A regression
  was introduced, fixed by https://github.com/timberio/vector/pull/5921,
  where new packages couldn't install due to the user already existing.
* Adds Terraform lock files
* Adds `-y` flag to `./bin/teardown` to supress Terraform prompt

Fixes https://github.com/timberio/vector-test-harness/issues/64

Signed-off-by: Jesse Szwedko <jesse@szwedko.me>

--- a/ansible/roles/vector/tasks/install.yml
+++ b/ansible/roles/vector/tasks/install.yml
@@ -7,6 +7,12 @@
         name: vector
         state: absent
 
+    - name: Ensure vector user is removed before installing
+      user:
+        name: vector
+        state: absent
+        remove: yes
+
     - name: Install Vector .deb package from URL
       when: vector_version is not regex('^dev-')
       include: "install_deb_from_url.yml"
