--- a/cases/disk_buffer_performance/ansible/run.yml
+++ b/cases/disk_buffer_performance/ansible/run.yml
@@ -29,7 +29,7 @@
 - hosts: '{{ test_namespace }}:&tag_TestRole_producer'
   become: true
   tasks:
-    - name: Wait for port {{ subject_port }} to become available
+    - name: Wait for subject {{ subject_ip }}:{{ subject_port }} to become available
       wait_for:
         host: "{{ subject_ip }}"
         port: "{{ subject_port }}"
@@ -38,7 +38,7 @@
     - name: Warmup {{ test_subject }}
       shell: |
         socat_loop 10 /tmp/flog-100MiB.log \
-          -u - tcp:{{ hostvars[groups.tag_TestRole_subject.0].private_ip_address }}:{{ subject_port }}
+          -u - tcp:{{ subject_ip }}:{{ subject_port }}
       register: timeout
       failed_when: timeout.rc != 124
 
@@ -57,7 +57,7 @@
     - name: Pipe test data to {{ test_subject }}
       shell: |
         socat_loop 60 /tmp/flog-100MiB.log \
-          -u - tcp:{{ hostvars[groups.tag_TestRole_subject.0].private_ip_address }}:{{ subject_port }}
+          -u - tcp:{{ subject_ip }}:{{ subject_port }}
       register: timeout
       failed_when: timeout.rc != 124
 
