--- a/cases/performance/file_to_blackhole/vector.toml
+++ b/cases/performance/file_to_blackhole/vector.toml
@@ -5,7 +5,7 @@ type = "internal_metrics"
 
 [sources.file]
 type = "file"
-max_line_bytes = 102400
+max_line_bytes = 1024000
 fingerprint.strategy = "device_and_inode"
 include = ["logs/*.log"]
 
