reworked klog_remap_to_blackhole a little to start supporting slash commands

--- a/cases/performance/klog_remap_to_blackhole/configs/remap-nohop.toml
+++ b/cases/performance/klog_remap_to_blackhole/configs/remap-nohop.toml
@@ -20,7 +20,7 @@ if err != null {
   .container = matches.container
 }
 # add_fields transform equivalent
-.origin_id, err = .namespace + "/" + .pod + "/" + .container
+.origin_id = .namespace + "/" + .pod + "/" + .container
 .agent_name = "vector"
 .host = "${VECTOR_SELF_NODE_NAME}"
 # coercer transform equivalent
